# comsol-free

./: .gitignore  .gitmodules  README.md  main.py  main_window.py  mpl_canvas.py  pyproject.toml  uic.bat
comsol_projects/: naca0012_airfoil.mph  test.mph  turbulent.mph
data/: boundary.txt  geometry.mphtxt  mesh.mphtxt  test.txt  test2.txt
modules/data/: .opt  main.py  result.json  result_test.json
modules/data/src/: editable_bezier.py  event_handler.py  graphics_view.py  grid_scene.py  main_window.py  parametric_dialog.py
modules/data/src/commands/: add_command.py  command.py  delete_command.py  move_command.py  rotate_command.py
modules/data/src/dialogs/: bezier_dialog.py  boundary_condition_dialog.py  boundary_conditions_dialog.py  dialog.py  dialog_factory.py  ellipse_dialog.py  initial_condition_dialog.py  initial_conditions_dialog.py  line_dialog.py  material_dialog.py  mesh_dialog.py  parametric_dialog.py  rect_dialog.py  turbulence_dialog.py
modules/data/src/operations/: boolean_operations.py  transformation_operations.py
modules/data/src/physics/: turbulence_models.py
modules/data/src/services/: command_service.py  drawing_service.py  gmsh_mesh_builder.py  mesh_service.py  selection_service.py
modules/data/src/shapes/: boolean_item.py  line_item.py  (+4 more)
modules/solver/: facets.xdmf  main.py  mesh_all.xdmf  mesh_bnd.xdmf  mesh_vol.xdmf  solve_cfd.py  volume.xdmf
modules/solver/test/: test
modules/visualization/: main.py
modules/visualization/src/: main_window.py  mpl_canvas.py
services/: data_parser.py  plotter.py
ui/: comsol.py  comsol.ui
(+18 files in other folders)
