[project]
name = "comsol-freedd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gmsh>=4.13.1",
    "jax>=0.6.0",
    "matplotlib>=3.10.1",
    "meshio[all]>=5.3.5",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "pyside6>=6.9.0",
    "scipy>=1.15.2",
    "sfepy",
]

[tool.uv.sources]
sfepy = { path = "modules/solver/sfepy_git" }
